Frontend: Create CityInfo.css for styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" /> <!-- add site logo here -->
+    <link rel="icon" type="image/svg+xml" href="#" />
+    <!-- add site logo here -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel buddy</title>
   </head>
