--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,11 @@
     <!-- add site logo here -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel buddy</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Sedan+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="" />
   </head>
   <body>
     <div id="root"></div>
